--- a/menu.html
+++ b/menu.html
@@ -410,6 +410,227 @@
                             ЧИЛИ)</a><span>₽40</span>
                     </div>
                 </div>
+<!--                kitchen-->
+
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">COLD RIVER</a><span>₽ПШЕНИЧНОЕ (4,5%)</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ВИСКИ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">THE FAMOUSE GROUSE 0,04л</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">HATOZAKI 0,04л</a><span>₽500</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">WILD TURKEY RYE 0,04л</a><span>₽600</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">JIM BEAM WHITE 0,4л</a><span>₽220</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">JIM BEAM RED STAG/HONEY</a><span>₽250</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ВИНО-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">Красное Полусухое Aragonez, Syrah 0,125</a><span>₽250</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">Белое сухое Riesling 0,125</a><span>₽250</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">Игристое вино сухое Лев Голицын</a><span>₽250</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">РОМ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">BRUGAL ANEJO 0,04л</a><span>₽250РУБ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">NEGRITA SPICED 0,04 л -150</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">NEGRRITA WHITE 0,04л</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">GIAROLA WHITE 0,04л</a><span>₽200РУБ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ТЕКИЛА-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">LEY925 0,04Л-250</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ДЖИН-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">BARRISTER в ассортименте</a><span>₽150</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">GREEN BABOON</a><span>₽150</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">135 EAST HUOGO DTY GIN</a><span>₽350</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ЛИКЕРЫ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">SAMBUCA 0,04л</a><span>₽180</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ЦАРСКИЙ СЛИВОЧНЫЙ ЛИКЕР 0,04л</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">FRUKO SCHULZ ABSINTH ABSOLVENT 0,04л</a><span>₽250</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">JAEGERMEISTER 0,04</a><span>₽400</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">TUNDRA BITTER MINT</a><span>₽100</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">Beluga Hunting Berry Bitter 280</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">АПЕРИТИВЫ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">MARTINI FIERO 0,04л</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">MARTINI EXTRA DRY 0,04</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">MARTINI ROSSO 0,04</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div> (временно нет)-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">MARTINI BIANCO 0,04</a><span>₽200</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ПОРТО TRESARCOS TAWNY 0,04л</a><span>₽200РУБ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">APEROL 0,04л</a><span>₽250РУБ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ВОДКА-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">БЕЛУГА ТРАНСАТЛАНТИК 0,04</a><span>₽150</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ЦАРСКАЯ ОРИГИНАЛЬНАЯ 0,04</a><span>₽100</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ЦАРСКАЯ ЗОЛОТАЯ 0,04</a><span>₽120</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">КОНЬЯК-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ROULLET VSOP GRANDE CHAMPAGNE 0,04л</a><span>₽400</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">БРЕНДИ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">BRUNEL NAPOLEON VSOP 0,04л</a><span>₽210РУБ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">HENRI MOUNIER 0,04л</a><span>₽400</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">ДОМАШНИЕ ЛИМОНАДЫ 0,4л</a><span>₽250</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">СОК RICH 02л</a><span>₽100</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">КОЛА/ШВЕПС 0,2 Л</a><span>₽80</span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--				<div class="col-lg-6 menu-item filter-kitchen">-->
+<!--                    <div class="menu-content">-->
+<!--                        <a href="#">RED BULL 025л</a><span>₽170</span>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </section><!-- End Menu Section -->
