--- a/menu.html
+++ b/menu.html
@@ -127,48 +127,13 @@
             </div>
 
             <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
-                <!-- ======= Пиво ======= -->
-                <div class="col-lg-6 menu-item filter-beer">
+                <!-- ======= ШОТЫ ======= -->
+                <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-sections">
-                        <h2>Пиво 🍺</h2>
+                        <h2>ШОТЫ</h2>
                     </div>
                 </div>
 
-                <div class="col-lg-6 menu-item filter-beer">
-                    <div class="menu-content">
-                        <a href="#">COLD RIVER - ПШЕНИЧНОЕ (4,5%)</a><span>₽200</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-beer">
-                    <div class="menu-content">
-                        <a href="#">TELMAN - LAGER (4,5%)</a><span>₽250</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-beer">
-                    <div class="menu-content">
-                        <a href="#">COLD RIVER - BLUEBERRY STOUT (6%)</a><span>₽280</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-beer">
-                    <div class="menu-content">
-                        <a href="#">COLD RIVER - IPA (6,7%) (Временно нет)</a><span>₽300</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-beer">
-                    <div class="menu-content">
-                        <a href="#">COLD RIVER - SOUR ALE (5,5%)</a><span>₽350</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-beer">
-                    <div class="menu-content">
-                        <a href="#">COLD RIVER - ТОМАТКА (5,5%)</a><span>₽280</span>
-                    </div>
-                </div>
-                <div class="col-lg-6 menu-item filter-beer">
-                    <div class="menu-content">
-                        <a href="#">КРАФТ - уточняйте у бармена</a><span>₽370</span>
-                    </div>
-                </div>
 
                 <!-- ======= Настойки ======= -->
                 <div class="col-lg-6 menu-item filter-tincture">
@@ -249,6 +214,49 @@
                 <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-content">
                         <a href="#">ЛЕБОВСКИ</a><span>₽150</span>
+                    </div>
+                </div>
+
+
+                <!-- ======= Пиво ======= -->
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-sections">
+                        <h2>Пиво 🍺</h2>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-content">
+                        <a href="#">COLD RIVER - ПШЕНИЧНОЕ (4,5%)</a><span>₽200</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-content">
+                        <a href="#">TELMAN - LAGER (4,5%)</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-content">
+                        <a href="#">COLD RIVER - BLUEBERRY STOUT (6%)</a><span>₽280</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-content">
+                        <a href="#">COLD RIVER - IPA (6,7%) (Временно нет)</a><span>₽300</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-content">
+                        <a href="#">COLD RIVER - SOUR ALE (5,5%)</a><span>₽350</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-content">
+                        <a href="#">COLD RIVER - ТОМАТКА (5,5%)</a><span>₽280</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-beer">
+                    <div class="menu-content">
+                        <a href="#">КРАФТ - уточняйте у бармена</a><span>₽370</span>
                     </div>
                 </div>
 
@@ -411,6 +419,8 @@
                     </div>
                 </div>
 
+
+                <!-- ======= ВИСКИ ======= -->
                 <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-sections">
                         <h2>ВИСКИ 🥃</h2>
@@ -443,6 +453,7 @@
                 </div>
 
 
+                <!-- ======= ВИНО ======= -->
                 <div class="col-lg-6 menu-item filter-wine">
                     <div class="menu-sections">
                         <h2>ВИНО 🍷</h2>
@@ -463,6 +474,10 @@
                         <a href="#">Игристое вино сухое Лев Голицын</a><span>₽250</span>
                     </div>
                 </div>
+
+
+
+                <!-- ======= РОМ ======= -->
 				<div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-sections">
                         <h2>РОМ</h2>
@@ -488,6 +503,8 @@
                         <a href="#">GIAROLA WHITE 0,04л</a><span>₽200</span>
                     </div>
                 </div>
+
+                <!-- ======= ТЕКИЛА ======= -->
 				<div class="col-lg-6 menu-item filter-tequila">
                     <div class="menu-sections">
                         <h2>ТЕКИЛА</h2>
@@ -498,6 +515,9 @@
                         <a href="#">LEY925 0,04л</a><span>₽250</span>
                     </div>
                 </div>
+
+
+                <!-- ======= ДЖИН ======= -->
                 <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>ДЖИН</h2>
@@ -518,6 +538,9 @@
                         <a href="#">135 EAST HUOGO DTY GIN</a><span>₽350</span>
                     </div>
                 </div>
+
+
+                <!-- ======= ЛИКЕРЫ ======= -->
 				<div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>ЛИКЕРЫ</h2>
@@ -554,7 +577,7 @@
                     </div>
                 </div>
 
-
+                <!-- ======= АПЕРИТИВЫ ======= -->
 				<div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>АПЕРИТИВЫ</h2>
@@ -627,6 +650,7 @@
                 </div>
 
 
+                <!-- ======= БРЕНДИ ======= -->
 				<div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>БРЕНДИ</h2>
