--- a/menu.html
+++ b/menu.html
@@ -135,6 +135,67 @@
                 </div>
 
 
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">Лаванда, мята, джин 0,04л</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">Соленая карамель, вишня, ром 0,04л</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">Облепиха, малина имбирь, текила 0,04л</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">Бабл гам, маракуйя, лимон, водка 0,04л</a><span>₽250</span>
+                    </div>
+                </div>
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">Имбирный пряник, коровка, виски 0,04л</a><span>₽250</span>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">СЕТ ИЗ 5 ШОТОВ</a><span>₽1000</span>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «ФРЕДИ КЛЮКВЕР»</a><span>₽1000</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        -5 Кисло-сладких шотов с клюквой и арбузом
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «СИНИЙ ДЕНЧИК»</a><span>₽1000</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        -5 Сладко-пряных шота с ананасом, цитрусом и корицей
+                    </div>
+                </div>
+
+                <div class="col-lg-6 menu-item filter-tincture">
+                    <div class="menu-content">
+                        <a href="#">СЕТ ИЗ 5 ШЕЙК-ШОТОВ «ШРЕК»</a><span>₽1000</span>
+                    </div>
+                    <div class="menu-ingredients">
+                        5 Освежающе-кислых шота с Mintu, яблоком и киви
+                    </div>
+                </div>
+
+
                 <!-- ======= Настойки ======= -->
                 <div class="col-lg-6 menu-item filter-tincture">
                     <div class="menu-sections">
@@ -329,7 +390,8 @@
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
-                        <a href="#">КУРИНАЯ КОТЛЕТА С СЫРОМ И ЗАПЕЧЕННЫМ КАРТОФЕЛЕМ (ВРЕМЕННО НЕТ)</a><span>₽300</span>
+                        <a href="#">КУРИНАЯ КОТЛЕТА С СЫРОМ И ЗАПЕЧЕННЫМ КАРТОФЕЛЕМ (ВРЕМЕННО
+                            НЕТ)</a><span>₽300</span>
                     </div>
                 </div>
                 <div class="col-lg-6 menu-item filter-kitchen">
@@ -426,27 +488,27 @@
                         <h2>ВИСКИ 🥃</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-whiskey">
+                <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
                         <a href="#">THE FAMOUSE GROUSE 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-whiskey">
+                <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
                         <a href="#">HATOZAKI 0,04л</a><span>₽500</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-whiskey">
+                <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
                         <a href="#">WILD TURKEY RYE 0,04л</a><span>₽600</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-whiskey">
+                <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
                         <a href="#">JIM BEAM WHITE 0,4л</a><span>₽220</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-whiskey">
+                <div class="col-lg-6 menu-item filter-whiskey">
                     <div class="menu-content">
                         <a href="#">JIM BEAM RED STAG/HONEY</a><span>₽250</span>
                     </div>
@@ -459,58 +521,57 @@
                         <h2>ВИНО 🍷</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-wine">
+                <div class="col-lg-6 menu-item filter-wine">
                     <div class="menu-content">
                         <a href="#">Красное Полусухое Aragonez, Syrah 0,125</a><span>₽250</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-wine">
+                <div class="col-lg-6 menu-item filter-wine">
                     <div class="menu-content">
                         <a href="#">Белое сухое Riesling 0,125</a><span>₽250</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-wine">
+                <div class="col-lg-6 menu-item filter-wine">
                     <div class="menu-content">
                         <a href="#">Игристое вино сухое Лев Голицын</a><span>₽250</span>
                     </div>
                 </div>
 
 
-
                 <!-- ======= РОМ ======= -->
-				<div class="col-lg-6 menu-item filter-rum">
+                <div class="col-lg-6 menu-item filter-rum">
                     <div class="menu-sections">
                         <h2>РОМ</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">BRUGAL ANEJO 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">NEGRITA SPICED 0,04л</a><span>₽150</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">NEGRRITA WHITE 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">GIAROLA WHITE 0,04л</a><span>₽200</span>
                     </div>
                 </div>
 
                 <!-- ======= ТЕКИЛА ======= -->
-				<div class="col-lg-6 menu-item filter-tequila">
+                <div class="col-lg-6 menu-item filter-tequila">
                     <div class="menu-sections">
                         <h2>ТЕКИЛА</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-tequila">
+                <div class="col-lg-6 menu-item filter-tequila">
                     <div class="menu-content">
                         <a href="#">LEY925 0,04л</a><span>₽250</span>
                     </div>
@@ -523,17 +584,17 @@
                         <h2>ДЖИН</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-content">
                         <a href="#">BARRISTER в ассортименте</a><span>₽150</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-content">
                         <a href="#">GREEN BABOON</a><span>₽150</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-content">
                         <a href="#">135 EAST HUOGO DTY GIN</a><span>₽350</span>
                     </div>
@@ -541,74 +602,75 @@
 
 
                 <!-- ======= ЛИКЕРЫ ======= -->
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>ЛИКЕРЫ</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">SAMBUCA 0,04л</a><span>₽180</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">ЦАРСКИЙ СЛИВОЧНЫЙ ЛИКЕР 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">FRUKO SCHULZ ABSINTH ABSOLVENT 0,04л</a><span>₽250</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">JAEGERMEISTER 0,04</a><span>₽400</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">TUNDRA BITTER MINT</a><span>₽100</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">Beluga Hunting Berry Bitter</a><span>₽280</span>
                     </div>
                 </div>
 
                 <!-- ======= АПЕРИТИВЫ ======= -->
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>АПЕРИТИВЫ</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">MARTINI FIERO 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">MARTINI EXTRA DRY 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">MARTINI ROSSO 0,04л</a><span>₽200</span>
                     </div>
-                </div> (временно нет)
-				<div class="col-lg-6 menu-item filter-kitchen">
+                </div>
+                (временно нет)
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">MARTINI BIANCO 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">ПОРТО TRESARCOS TAWNY 0,04л</a><span>₽200</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">APEROL 0,04л</a><span>₽250</span>
                     </div>
@@ -616,34 +678,34 @@
 
 
                 <!-- ======= ВОДКА ======= -->
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>ВОДКА</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">БЕЛУГА ТРАНСАТЛАНТИК 0,04л</a><span>₽150</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">ЦАРСКАЯ ОРИГИНАЛЬНАЯ 0,04л</a><span>₽100</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">ЦАРСКАЯ ЗОЛОТАЯ 0,04л</a><span>₽120</span>
                     </div>
                 </div>
 
                 <!-- ======= КОНЬЯК ======= -->
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>КОНЬЯК</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">ROULLET VSOP GRANDE CHAMPAGNE 0,04л</a><span>₽400</span>
                     </div>
@@ -651,44 +713,44 @@
 
 
                 <!-- ======= БРЕНДИ ======= -->
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>БРЕНДИ</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">BRUNEL NAPOLEON VSOP 0,04л</a><span>₽210</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">HENRI MOUNIER 0,04л</a><span>₽400</span>
                     </div>
                 </div>
 
                 <!-- ======= БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ ======= -->
-				<div class="col-lg-6 menu-item filter-gin">
+                <div class="col-lg-6 menu-item filter-gin">
                     <div class="menu-sections">
                         <h2>БЕЗАЛКОГОЛЬНЫЕ НАПИТКИ</h2>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">ДОМАШНИЕ ЛИМОНАДЫ 0,4л</a><span>₽250</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">СОК RICH 0,2л</a><span>₽100</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">КОЛА/ШВЕПС 0,2л</a><span>₽80</span>
                     </div>
                 </div>
-				<div class="col-lg-6 menu-item filter-kitchen">
+                <div class="col-lg-6 menu-item filter-kitchen">
                     <div class="menu-content">
                         <a href="#">RED BULL 0,25л</a><span>₽170</span>
                     </div>
