--- a/menu.html
+++ b/menu.html
@@ -111,7 +111,7 @@
             <br>
             <br>
             <div class="section-title">
-                <h2>Menu</h2>
+                <h2>Меню</h2>
                 <!--          <p>Check Our Tasty Menu</p>-->
             </div>
 
